# signalflow-nn

./: .gitignore  README.md  ROADMAP.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
notebooks/: test.ipynb
src/signalflow/nn/: __init__.py
src/signalflow/nn/data/: __init__.py  signal_data_module.py  signal_datamodule.py  signal_window_dataset.py  ts_preprocessor.py
src/signalflow/nn/encoder/: __init__.py  conv1d.py  convtran.py  gmlp.py  gru.py  inception.py  itransformer.py  lstm.py  mamba.py  omniscale.py  patchtst.py  resnet1d.py  tcn.py  transformer.py  tsmixer.py  xception.py  xcm.py
src/signalflow/nn/head/: __init__.py  attention_head.py  confidence_head.py  distribution_head.py  linear_head.py  mlp_classifier.py  mlp_head.py  ordinal_head.py  residual_head.py
src/signalflow/nn/layer/: __init__.py
src/signalflow/nn/layer/encoder/: __init__.py  base.py  lstm.py
src/signalflow/nn/loss/: __init__.py  dice.py  focal.py  ldam.py  symmetric_ce.py
src/signalflow/nn/model/: __init__.py  base.py  temporal_classificator.py
src/signalflow/nn/validator/: __init__.py  lightning.py  temporal_validator.py
tests/: conftest.py  test_encoders.py  test_heads.py  test_losses.py  test_new_encoders.py  test_signal_data_module.py  test_signal_window_dataset.py  test_temporal_classificator.py  test_temporal_validator.py  test_ts_preprocessor.py
